Implement table-based CRUD for cultural level and foreign language sections

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,8 @@ services:
     networks:
       - vue-dashboard-network
     restart: unless-stopped
+    healthcheck:
+      disable: true
 
   frontend:
     build:
