--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "build": "vite build",
     "preview": "vite preview",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "lint": "eslint . --ext .vue,.js --ignore-path .gitignore",
+    "lint:fix": "eslint . --ext .vue,.js --fix --ignore-path .gitignore",
+    "format": "prettier --write \"src/**/*.{js,vue,css}\""
   },
   "dependencies": {
     "apexcharts": "^5.2.0",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "pinia": "^3.0.4",
     "primeicons": "^7.0.0",
     "primevue": "^4.5.4",
     "sortablejs": "^1.15.6",
@@ -25,8 +29,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
+    "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/test-utils": "^2.4.6",
+    "eslint": "^9.39.2",
+    "eslint-plugin-vue": "^10.7.0",
     "happy-dom": "^15.11.7",
+    "prettier": "^3.8.0",
     "vite": "^7.0.6",
     "vitest": "^2.1.8"
   }
