--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ services:
     image: mongo:7.0
     container_name: vue-dashboard-mongodb
     environment:
-      MONGO_INITDB_ROOT_USERNAME: admin
-      MONGO_INITDB_ROOT_PASSWORD: password
-      MONGO_INITDB_DATABASE: vue-dashboard
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME:-admin}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-password}
+      MONGO_INITDB_DATABASE: ${MONGO_DATABASE:-vue-dashboard}
     ports:
-      - "27017:27017"
+      - "${MONGO_PORT:-27017}:27017"
     volumes:
       - mongodb-data:/data/db
     networks:
@@ -27,13 +27,13 @@ services:
       mongodb:
         condition: service_healthy
     environment:
-      MONGODB_URI: mongodb://admin:password@mongodb:27017/vue-dashboard?authSource=admin
-      JWT_SECRET: your_super_secret_jwt_key_change_in_production
-      NODE_ENV: production
-      PORT: 5000
-      CORS_ORIGIN: http://localhost:5173
+      MONGODB_URI: ${MONGODB_URI:-mongodb://admin:password@mongodb:27017/vue-dashboard?authSource=admin}
+      JWT_SECRET: ${JWT_SECRET:-your_super_secret_jwt_key_change_in_production}
+      NODE_ENV: ${NODE_ENV:-production}
+      PORT: ${BACKEND_PORT:-5000}
+      CORS_ORIGIN: ${CORS_ORIGIN:-http://localhost:5173}
     ports:
-      - "5001:5000"
+      - "${BACKEND_EXTERNAL_PORT:-5001}:${BACKEND_PORT:-5000}"
     networks:
       - vue-dashboard-network
     restart: unless-stopped
@@ -48,9 +48,9 @@ services:
     depends_on:
       - backend
     environment:
-      VITE_API_URL: http://localhost:5001/api
+      VITE_API_URL: ${VITE_API_URL:-http://localhost:5001/api}
     ports:
-      - "5173:5173"
+      - "${FRONTEND_PORT:-5173}:5173"
     networks:
       - vue-dashboard-network
     restart: unless-stopped
