--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.5.4",
     "sortablejs": "^1.15.6",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.3",
     "vue-router": "^4.5.1",
     "vue3-apexcharts": "^1.8.0",
-    "vue3-easy-data-table": "^1.5.47"
+    "vue3-easy-data-table": "^1.5.47",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
