--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand",
-    "seed": "node seeder.js"
+    "seed": "node seeder.js",
+    "init-geography": "node scripts/initGeography.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.0",
     "pdfkit": "^0.15.2",
     "sharp": "^0.34.5"
   },
